2002-11-14  David Hyatt  <hyatt@apple.com>

	Move text measurement and layout beyond onload.  This
	shoudl speed up i-bench substantially and morrison's
	PLT test slightly.

	Also allow <table>s as children of <p> and <h1>-<h6>.
	This fixes floats on slashdot.org (the left side) and
	the floating tables in articles on wired.com.
	
        * khtml/html/dtd.cpp:
        (DOM::checkChild):
        * khtml/html/html_documentimpl.cpp:
        (HTMLDocumentImpl::HTMLDocumentImpl):
        (HTMLDocumentImpl::close):
        * khtml/html/html_documentimpl.h:
        * khtml/html/htmlparser.cpp:
        (KHTMLParser::insertNode):

2002-11-14  Richard Williamson  <rjw@apple.com>

        Fixed 3099505.  With the recent white space changes, multiple slaves may
        be created for contiguous text on the same line.  The fix changes the
        iteration order of over the slave array.  Now, when searching for the end
        point of a line we'll always find the last slave on a line first.
        
        * khtml/khtml_part.cpp:
        (lastSlaveAt):

2002-11-14  Darin Adler  <darin@apple.com>

	- fixed 3095854 -- small select boxes get no scrollbar

        * kwq/KWQListBox.mm: (QListBox::sizeForNumberOfLines):
	Always use a minimum of 4 lines.

=== Alexander-32 ===

2002-11-14  Darin Adler  <darin@apple.com>

	- fixed 3099240 -- REGRESSION: repro assert d->m_doc->parsing

	Don't force all redirects to be reloads, because the ones from JavaScript must
	not be. Maybe a better solution post-Alex-32 will be to pass a flag that distinguishes
	redirects from other location changes.

        * khtml/khtml_part.cpp: (KHTMLPart::slotRedirect): Don't ignore the anchor when
	comparing URLs to see if they should be a reload. We'll still do a reload if the URLs
	are actually equal, but if they differ in anchor we will just go to the anchor.
	This is the bug fix.

        * kwq/WebCoreBridge.h: Add reload parameter.