@@ -1,5 +1,15 @@
 2002-11-14  David Hyatt  <hyatt@apple.com>
 
+	Fix spinner.com mislayout on the PLT.  Make sure 
+	<input type=image> honors the width attribute and
+	make sure that its render object calls updateFromElement.
+	
+        * khtml/html/html_formimpl.cpp:
+        (HTMLInputElementImpl::parseAttribute):
+        (HTMLInputElementImpl::attach):
+
+2002-11-14  David Hyatt  <hyatt@apple.com>
+
 	Move text measurement and layout beyond onload.  This
 	shoudl speed up i-bench substantially and morrison's
 	PLT test slightly.
